# capy.life

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  run.py
.github/workflows/: codeql-analysis.yml  dev-python.yml  dev-vite.yml  docker-publish.yml  prod-python.yml  prod-vite.yml  python-checks.yml  python.yml  vite-checks.yml  vite.yml
app/: jwt.py  main.py
app/controllers/: admin.py  get.py  submit.py
app/lib/: s3.py  stats.py
app/models/: admin.py  get.py  submit.py
backbara/: .gitignore  main.py  requirements.txt
backbara/capybara/: __init__.py  env.py  errors.py  logs.py  modals.py  oauth.py  resources.py
backbara/capybara/helpers/: admin.py  captcha.py  capy.py  emailer.py  greg.py  invite.py  jwt_.py
backbara/capybara/http/: __init__.py  decorators.py  errors.py  websocket.py
backbara/capybara/http/routes/: admin.py  captcha.py  login.py  submit_capy.py
backbara/capybara/http/routes/admin/: approve.py  invites.py  login.py  misc.py
backbara/capybara/http/routes/capy/: get.py  image.py  submit.py  timeline.py
backend/: .env  pyproject.toml  requirements.txt  run.py
backend/app/: env.py  jwt.py  main.py  resources.py
backend/app/controllers/: __init__.py  admin.py  get.py  image.py  submit.py
backend/app/lib/: s3.py  stats.py
backend/app/models/: admin.py  get.py  submit.py
frontbara/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontbara/src/: App.svelte  main.ts  stores.ts
frontbara/src/api/: index.ts  interfaces.ts
frontbara/src/assets/: style.css
frontbara/src/assets/css/: style.css
frontbara/src/components/: Captcha.svelte
frontbara/src/routes/: Admin.svelte  Home.svelte  Login.svelte  Otp.svelte
frontend/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json  replace_env_vars.sh  svelte.config.js  tsconfig.json  vercel.json
frontend/src/: App.svelte  main.ts  store.ts
frontend/src/assets/: styles.css
frontend/src/components/: CapybaraCard.svelte  Image.svelte  Lazy.svelte  PageLoading.svelte  RouteTransition.svelte  TransitionContainer.svelte
frontend/src/lib/: CapybaraCard.svelte  Image.svelte  capy.ts  timeout.ts
frontend/src/lib/client/: CapyClient.ts  index.ts
frontend/src/lib/client/core/: OpenAPI.ts
frontend/src/routes/: Admin.svelte  AdminAuth.svelte  Home.svelte  LazyRoute.svelte  Submit.svelte
(+10 files in other folders)
