[tool.poetry]
name = "capylife"
version = "0.1.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]


[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
aiobotocore = "^2.8.0"
aiohttp = "^3.9.1"
dhash = "^1.4"
motor = "^3.3.2"
names = "^0.3.0"
pillow = "^10.2.0"
types-aiobotocore = "^2.8.0"
uvicorn = "^0.24.0"
starlite = {version = "^1.51.14", extras = ["full"]}
nanoid = "^2.0.0"


[tool.poetry.group.dev.dependencies]
types-aiobotocore = "^2.8.0"
motor-types = "^1.0.0b3"
black = "^23.10.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
