[tool.poetry]
name = "capylife"
version = "0.1.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]


[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
aiobotocore = "^2.13.1"
aiohttp = "^3.9.5"
dhash = "^1.4"
motor = "^3.5.1"
names = "^0.3.0"
pillow = "^10.3.0"
types-aiobotocore = "^2.13.1"
uvicorn = "^0.31.0"
starlite = {version = "^1.51.16", extras = ["full"]}
nanoid = "^2.0.0"


[tool.poetry.group.dev.dependencies]
types-aiobotocore = "^2.13.1"
motor-types = "^1.0.0b4"
black = "^24.4.2"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
